<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="prathameshshetye.mark.ui.AddMarker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/monitor_toolbar"
            android:background="@color/primary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:elevation="4dp"
            android:navigationIcon="@drawable/ic_navigation_arrow_back"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/marker_add"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold"
                    android:textColor="@color/secondary_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/marker_tag"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"/>
                <EditText
                    android:id="@+id/marker_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:inputType="textShortMessage|textMultiLine|textCapSentences" />
                <EditText
                    android:id="@+id/marker_descrip"
                    android:hint="@string/marker_descrip"
                    android:textColorHint="@color/secondary_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:inputType="textLongMessage|textMultiLine|textWebEditText|textCapSentences" />
            </LinearLayout>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:minHeight="40dp"
                android:minWidth="40dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marker_camera"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/hint_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_communication_location_on"
                android:minHeight="40dp"
                android:minWidth="40dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/marker_lat"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/hint_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/marker_latitude"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hint_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/marker_lng"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/hint_text"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/marker_longitude"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hint_text"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
